# vinyl-lang

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs  test
src/: ast.rs  main.rs
src/analysis/: errors.rs  mod.rs  type_checker.rs
src/ast/: ast.rs  parser.rs
src/codegen/llvm/: codegen.rs  enums.rs  export.rs  mod.rs
src/parser/: ast.rs  errors.rs  mod.rs  parser.rs
src/type_checker/: type_checker.rs
src/utilities/: mod.rs  utilities.rs
