[package]
name = "vinyl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
lasso = "0.6.0"
ariadne = { git = "https://github.com/zesterer/ariadne.git" }
convert_case = "0.5.0"
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
cc="*"
